Reproduction case for bizarre oxlint behavior with import/extensions rule and ignorePackages option.

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -8,9 +8,7 @@
     "import/extensions": [
       "error",
       "always",
-      {
-        "ignorePackages": true
-      }
+      { "ignorePackages": true }
     ]
   }
 }
